tests/fsharp/typecheck/sigs/neg36.bsl

neg36.fs(11,20,11,21): typecheck error FS0361: The override 'M: string -> int' implements more than one abstract slot, e.g. 'abstract TestAbstractOverrides_Bug4232_Case1.D.M: 'U -> int' and 'abstract TestAbstractOverrides_Bug4232_Case1.D.M: 'T -> int'

neg36.fs(32,23,32,24): typecheck error FS0361: The override 'M: int -> unit' implements more than one abstract slot, e.g. 'abstract TestAbstractOverrides_Bug4232_Case2.PB.M: 'a -> unit' and 'abstract TestAbstractOverrides_Bug4232_Case2.PA.M: int -> unit'
